@@ -53,7 +53,8 @@ Bug Fixes:
     ab, not a.  This is the documented behavior.
  -- wordpos() did not strip ansi before counting characters.
  -- Fix signed / unsigned warning in dump_info() (Issue 276).
-
+ -- Corrected minor typo in @comon section of help.txt. (Issue 275)
+ -- Restore newline skipping in wrap(), broken in 2.7.0.2 (Issue 278).
 
 Performance Enhancements:
 ~~~~~~~~~~~~~~~~~~~~~~~~
